--- a/scss/components/_block.scss
+++ b/scss/components/_block.scss
@@ -4,9 +4,8 @@
 
 .region-head.col-md-12 {
     max-height: 130px;
-    /* background: #fda; */
     padding: 10px;
-    margin: 50px 0;
+    margin: 20px 0;
     background: url(/themes/masradix/logo.svg) center center no-repeat;
     background-size: 11%;
     opacity: 0.7
