--- a/scss/components/_node.scss
+++ b/scss/components/_node.scss
@@ -62,7 +62,7 @@ article.service-request footer {
   z-index: 4;
   margin: 0;
   position: absolute;
-  top: 0px;
+  top: 20px;
   display: block;
   height: 100px;
   background: -webkit-linear-gradient(left, black, rgba(255, 255, 255, 0));
