--- a/scss/components/_structure.scss
+++ b/scss/components/_structure.scss
@@ -1,2 +1,12 @@
 // Styles for Tabs, Messages, ..etc
 // -----------------------------------------------------------------------------
+
+// Page header
+// -----------------------------------------------------------------------------
+.page-header {
+  margin: 18px 0 18px;
+  h1 {
+    margin: 0;
+    text-align: center
+  }
+}
