--- a/scss/mas/_map.scss
+++ b/scss/mas/_map.scss
@@ -2,7 +2,8 @@
 // --------------------------------------------------
 body .stuck {
   position: fixed !important;
-  width: 100%;
+  width: 100vw;
+  height: 220px!important;
   right: 0;
   top: 0;
   margin: 0;
@@ -30,20 +31,12 @@ body.toolbar-tray-open.toolbar-fixed.toolbar-vertical .leaflet-bottom {
 
 // Geolocation fieldset stuck behaviour
 
-body .geolocation-map-canvas.stuck {
-  position: fixed;
-  width: 100%;
-  height: 220px !important;
-  right: 0;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  box-shadow: -1px 2px 12px #000000;
-  z-index: 4
+#edit-field-geolocation-0-map-container legend {
+  display:none
 }
 
 #edit-field-geolocation-0 .geolocation-map-canvas {
-  height: 220px !important;
+  height: 320px !important;
 }
 
 fieldset#edit-field-geofield-wrapper.stuck legend {
